// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestFormFieldBuilderContainer Doesn't fail on empty metadata 1`] = `
<DocumentFragment>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
      content="No Request Body for LivenessCheckAction /_liveness"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        <span
          class="bp3-popover-wrapper sc-bZQynM hRiALA"
        >
          <span
            class="bp3-popover-target"
          >
            <span
              class=""
              tabindex="0"
            >
              No Request Body for LivenessCheckAction /_liveness
            </span>
          </span>
        </span>
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders single body input 1`] = `
<DocumentFragment>
  <div
    class="bp3-form-group sc-iwsKbI eHluxy"
  >
    <label
      class="bp3-label"
    >
      <span />
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="bp3-control-group"
      >
        <textarea
          class="bp3-input bp3-fill sc-htoDjs jGMiBx"
          placeholder="Unparseable type. This input will return a string or JSON."
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form int field 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 0 1 .71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 0 1 1.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
    >
      <div>
        <div
          class="bp3-form-group sc-iwsKbI eHluxy"
        >
          <label
            class="bp3-label"
          >
            <span
              class="WrapTextContainer-sc-183e5nt coQeii"
            >
              Int Field (Int)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-control-group"
            >
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  placeholder="Int"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form multiple top level fields 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 0 1 .71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 0 1 1.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
    >
      <div>
        <div
          class="bp3-form-group sc-iwsKbI eHluxy"
        >
          <label
            class="bp3-label"
          >
            <span
              class="WrapTextContainer-sc-183e5nt coQeii"
            >
              Field 1 (Short)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-control-group"
            >
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  placeholder="Short"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="bp3-form-group sc-iwsKbI eHluxy"
        >
          <label
            class="bp3-label"
          >
            <span
              class="WrapTextContainer-sc-183e5nt coQeii"
            >
              Field 2 (Int)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-control-group"
            >
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  placeholder="Int"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="bp3-form-group sc-iwsKbI eHluxy"
        >
          <label
            class="bp3-label"
          >
            <span
              class="WrapTextContainer-sc-183e5nt coQeii"
            >
              Field 3 (Long)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-control-group"
            >
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  placeholder="Long"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="bp3-form-group sc-iwsKbI eHluxy"
        >
          <label
            class="bp3-label"
          >
            <span
              class="WrapTextContainer-sc-183e5nt coQeii"
            >
              Field 4 (Short)
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-control-group"
            >
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <div
                class="bp3-input-group"
              >
                <input
                  class="bp3-input"
                  placeholder="Short"
                  style="padding-right: 10px;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form nested int field 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 0 1 .71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 0 1 1.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
    >
      <div>
        <div
          class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
        >
          <div>
            <div
              class="bp3-form-group sc-iwsKbI eHluxy"
            >
              <label
                class="bp3-label"
              >
                <span
                  class="WrapTextContainer-sc-183e5nt coQeii"
                >
                  Int Field (Int)
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-control-group"
                >
                  <span
                    class="bp3-popover-wrapper sc-bZQynM hRiALA"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button sc-EHOje bcIieJ"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-add-to-artifact"
                          icon="add-to-artifact"
                        >
                          <svg
                            data-icon="add-to-artifact"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              add-to-artifact
                            </desc>
                            <path
                              d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                  <span
                    class="bp3-popover-wrapper sc-bZQynM hRiALA"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button sc-EHOje bcIieJ"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-more"
                          icon="more"
                        >
                          <svg
                            data-icon="more"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              more
                            </desc>
                            <path
                              d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      placeholder="Int"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form repeated nested int field 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 0 1 .71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 0 1 1.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
    >
      <div>
        <label
          class="bp3-label"
        >
          <span
            class="WrapTextContainer-sc-183e5nt coQeii"
          >
            Repeated Nested Int Field (nestedNoRepeatedInt)
          </span>
        </label>
        <div
          class="bp3-button-group"
        >
          <span
            class="bp3-popover-wrapper sc-bZQynM hRiALA"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button sc-EHOje bcIieJ"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-add-to-artifact"
                  icon="add-to-artifact"
                >
                  <svg
                    data-icon="add-to-artifact"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      add-to-artifact
                    </desc>
                    <path
                      d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
        <div
          class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
        >
          <div>
            <label
              class="bp3-label"
            >
              <span
                class="WrapTextContainer-sc-183e5nt coQeii"
              >
                Repeated Nested Int Field (nestedNoRepeatedInt)
              </span>
            </label>
            <div
              class="bp3-button-group"
            >
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
            >
              <div>
                <label
                  class="bp3-label"
                >
                  <span
                    class="WrapTextContainer-sc-183e5nt coQeii"
                  >
                    Nested Int Field (noRepeatedInt)
                  </span>
                </label>
                <div
                  class="bp3-button-group"
                >
                  <span
                    class="bp3-popover-wrapper sc-bZQynM hRiALA"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button sc-EHOje bcIieJ"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-add-to-artifact"
                          icon="add-to-artifact"
                        >
                          <svg
                            data-icon="add-to-artifact"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              add-to-artifact
                            </desc>
                            <path
                              d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
                >
                  <div>
                    <div
                      class="bp3-form-group sc-iwsKbI eHluxy"
                    >
                      <label
                        class="bp3-label"
                      >
                        <span
                          class="WrapTextContainer-sc-183e5nt coQeii"
                        >
                          Int Field (Int)
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-control-group"
                        >
                          <span
                            class="bp3-popover-wrapper sc-bZQynM hRiALA"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <button
                                class="bp3-button sc-EHOje bcIieJ"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="bp3-icon bp3-icon-add-to-artifact"
                                  icon="add-to-artifact"
                                >
                                  <svg
                                    data-icon="add-to-artifact"
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                  >
                                    <desc>
                                      add-to-artifact
                                    </desc>
                                    <path
                                      d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                          <span
                            class="bp3-popover-wrapper sc-bZQynM hRiALA"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <button
                                class="bp3-button sc-EHOje bcIieJ"
                                tabindex="0"
                                type="button"
                              >
                                <span
                                  class="bp3-icon bp3-icon-more"
                                  icon="more"
                                >
                                  <svg
                                    data-icon="more"
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                  >
                                    <desc>
                                      more
                                    </desc>
                                    <path
                                      d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              class="bp3-input"
                              placeholder="Int"
                              style="padding-right: 10px;"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form repeated nested repeated short field 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 0 1 .71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 0 1 1.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
    >
      <div>
        <label
          class="bp3-label"
        >
          <span
            class="WrapTextContainer-sc-183e5nt coQeii"
          >
            Nested Repeated Short Field (nestedRepeatedShort)
          </span>
        </label>
        <div
          class="bp3-button-group"
        >
          <span
            class="bp3-popover-wrapper sc-bZQynM hRiALA"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button sc-EHOje bcIieJ"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-add-to-artifact"
                  icon="add-to-artifact"
                >
                  <svg
                    data-icon="add-to-artifact"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      add-to-artifact
                    </desc>
                    <path
                      d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
        <div
          class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
        >
          <div>
            <label
              class="bp3-label"
            >
              <span
                class="WrapTextContainer-sc-183e5nt coQeii"
              >
                Nested Repeated Short Field (nestedRepeatedShort)
              </span>
            </label>
            <div
              class="bp3-button-group"
            >
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-add-to-artifact"
                      icon="add-to-artifact"
                    >
                      <svg
                        data-icon="add-to-artifact"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          add-to-artifact
                        </desc>
                        <path
                          d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-more"
                      icon="more"
                    >
                      <svg
                        data-icon="more"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          more
                        </desc>
                        <path
                          d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <span
                class="bp3-popover-wrapper sc-bZQynM hRiALA"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button sc-EHOje bcIieJ"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
            >
              <div>
                <label
                  class="bp3-label"
                >
                  <span
                    class="WrapTextContainer-sc-183e5nt coQeii"
                  >
                    Nested Short Field (repeatedShort)
                  </span>
                </label>
                <div
                  class="bp3-button-group"
                >
                  <span
                    class="bp3-popover-wrapper sc-bZQynM hRiALA"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button sc-EHOje bcIieJ"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-add-to-artifact"
                          icon="add-to-artifact"
                        >
                          <svg
                            data-icon="add-to-artifact"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              add-to-artifact
                            </desc>
                            <path
                              d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
                >
                  <div>
                    <div>
                      <div
                        class="bp3-form-group sc-iwsKbI eHluxy"
                      >
                        <label
                          class="bp3-label"
                        >
                          <span
                            class="WrapTextContainer-sc-183e5nt coQeii"
                          >
                            Repeated Short Field (Short)
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-control-group"
                          >
                            <span
                              class="bp3-popover-wrapper sc-bZQynM hRiALA"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="bp3-button sc-EHOje bcIieJ"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-add-to-artifact"
                                    icon="add-to-artifact"
                                  >
                                    <svg
                                      data-icon="add-to-artifact"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                    >
                                      <desc>
                                        add-to-artifact
                                      </desc>
                                      <path
                                        d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                            <span
                              class="bp3-popover-wrapper sc-bZQynM hRiALA"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="bp3-button sc-EHOje bcIieJ"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-more"
                                    icon="more"
                                  >
                                    <svg
                                      data-icon="more"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                    >
                                      <desc>
                                        more
                                      </desc>
                                      <path
                                        d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                            <span
                              class="bp3-popover-wrapper sc-bZQynM hRiALA"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="bp3-button sc-EHOje bcIieJ"
                                  tabindex="0"
                                  type="button"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-plus"
                                    icon="plus"
                                  >
                                    <svg
                                      data-icon="plus"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                    >
                                      <desc>
                                        plus
                                      </desc>
                                      <path
                                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                class="bp3-input"
                                placeholder="Short"
                                style="padding-right: 10px;"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form repeated short field 1`] = `
<DocumentFragment>
  <div>
    <div
      class="bp3-control-group bp3-fill"
    >
      <button
        class="bp3-button bp3-active sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-form"
          icon="form"
        >
          <svg
            data-icon="form"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              form
            </desc>
            <path
              d="M2 11v2h2v-2H2zM1 9h4c.55 0 1 .45 1 1v4c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1zm9-6h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1zM6 1a1.003 1.003 0 0 1 .71 1.71l-3 4C3.53 6.89 3.28 7 3 7s-.53-.11-.71-.29l-2-2a1.003 1.003 0 0 1 1.42-1.42L3 4.59l2.29-3.3C5.47 1.11 5.72 1 6 1zm4 10h5c.55 0 1 .45 1 1s-.45 1-1 1h-5c-.55 0-1-.45-1-1s.45-1 1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Form
        </span>
      </button>
      <button
        class="bp3-button sc-EHOje bcIieJ"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-more"
          icon="more"
        >
          <svg
            data-icon="more"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              more
            </desc>
            <path
              d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Raw
        </span>
      </button>
    </div>
    <div
      class="bp3-card bp3-elevation-0 sc-dnqmqq cnhlyr"
    >
      <div>
        <div>
          <div
            class="bp3-form-group sc-iwsKbI eHluxy"
          >
            <label
              class="bp3-label"
            >
              <span
                class="WrapTextContainer-sc-183e5nt coQeii"
              >
                Repeated Short Field (Short)
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-control-group"
              >
                <span
                  class="bp3-popover-wrapper sc-bZQynM hRiALA"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button sc-EHOje bcIieJ"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-add-to-artifact"
                        icon="add-to-artifact"
                      >
                        <svg
                          data-icon="add-to-artifact"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            add-to-artifact
                          </desc>
                          <path
                            d="M14 4.01h-1v-1c0-.55-.45-1-1-1s-1 .45-1 1v1h-1c-.55 0-1 .45-1 1s.45 1 1 1h1v1c0 .55.45 1 1 1s1-.45 1-1v-1h1c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm-13 2h6c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm8 6H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1zm0-4H1c-.55 0-1 .45-1 1s.45 1 1 1h8c.55 0 1-.45 1-1 0-.56-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <span
                  class="bp3-popover-wrapper sc-bZQynM hRiALA"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button sc-EHOje bcIieJ"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-more"
                        icon="more"
                      >
                        <svg
                          data-icon="more"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            more
                          </desc>
                          <path
                            d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <span
                  class="bp3-popover-wrapper sc-bZQynM hRiALA"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button sc-EHOje bcIieJ"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-plus"
                        icon="plus"
                      >
                        <svg
                          data-icon="plus"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            plus
                          </desc>
                          <path
                            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    placeholder="Short"
                    style="padding-right: 10px;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
